--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -12,15 +12,20 @@
         android:layout_height="wrap_content"
         android:text="@string/mainstr" />
     <Button
-        android:id="@+id/btn_perm"
+        android:id="@+id/btn_temp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/check_permissions" />
+        android:text="@string/swap_temp_sign" />
+    <Button
+        android:id="@+id/btn_pressure"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/swap_pres_sign" />
 
     <TextView android:id="@+id/tire1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:text="textheresdfsdfsdfsdf" />
     <TextView android:id="@+id/tire2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
