--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -25,7 +25,7 @@
     <TextView android:id="@+id/tire1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="textheresdfsdfsdfsdf" />
+        android:text="" />
     <TextView android:id="@+id/tire2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
